Fix white space at the bottom when scrolling in Android Chrome

--- a/src/components/PageBackground/PageBackground.module.scss
+++ b/src/components/PageBackground/PageBackground.module.scss
@@ -1,11 +1,17 @@
 .black {
-  background-color: #000;
+  .background {
+    background-color: #000;
+  }
 }
 
 .gradient {
-  background: linear-gradient(180deg, #5c6b76 0%, #566389 14.54%, #3334fe 79.77%) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-color: #3334fe;
+  
+  .background {
+    background: linear-gradient(180deg, #5c6b76 0%, #566389 14.54%, #3334fe 79.77%) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
 }
